# HDMRLib

./: README.md  pyproject.toml
.github/workflows/: pypi.yml  tests.yml
docs/: api.md  conf.py  examples.md  fundamentals.md  index.md  install.md  overview_of_hdmr_lib.md  requirements.txt
docs/_static/: custom.css  custom.js
docs/examples/: GALLERY_HEADER.rst
docs/examples/decomposition_workflows/: GALLERY_HEADER.rst  plot_compare_orders.py  plot_empr_custom_supports.py  plot_hdmr_custom_weights.py  plot_inspect_components.py  plot_lower_order_reconstruction.py
docs/examples/general_examples/: GALLERY_HEADER.rst  plot_01_hdmr_2d.py  plot_02_hdmr_2d_distinct_comp.py  plot_03_empr_hdmr_2d.py  plot_04_empr_3d.py  plot_empr_2d.py  plot_empr_rgb.py  plot_hdmr_2d_distinct_comp.py
docs/examples/general_examples/general_examples/: plot_empr_2d.py
docs/examples/research_examples/: GALLERY_HEADER.rst  hyperspectral_signature.md
docs/user_guide/: index.md  prepare_data.md  quick_start.md  run_a_decomposition.md  workflow_overview.md
hdmrlib/backends/: tensorflow_backend.py
